Fixes header alignment

--- a/src/components/Home/Menu/Menu.css
+++ b/src/components/Home/Menu/Menu.css
@@ -18,7 +18,7 @@
 .menu-icon {
     height: 30px;
     width: 30px;
-    position: fixed;
+    /*position: fixed;*/
     z-index: 2;
     right: 20px;
     top: 30px;
@@ -89,6 +89,7 @@
 .nav__content {
     position: fixed;
     top: 50%;
+    left: 0;
     transform: translate(0%, -50%);
     width: 100%;
     text-align: center;
